<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".MainActivity"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/edit_text_result_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_result"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

        <Button
            android:id="@+id/exit_button_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exit_button"
            android:textColor="#fdf0f0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sin_button_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sin_button"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cos_button_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cos_button"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/tan_button_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tan_button"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/image_button_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/user"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/clear_button_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/clear_button"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/multy_button_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/multy_button"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/div_button_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/div_button"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_one_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_one"
            android:textSize="20dp"
            android:background="#999c99"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_two_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_two"
            android:textSize="20dp"
            android:background="#999c99"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_three_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_three"
            android:textSize="20dp"
            android:background="#999c99"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sub_button_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sub_button"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <Button
                android:id="@+id/button_four_id"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/button_four"
                android:textSize="20dp"
                android:background="#999c99"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_seven_id"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/button_seven"
                android:textSize="20dp"
                android:background="#999c99"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <Button
                android:id="@+id/button_five_id"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/button_five"
                android:textSize="20dp"
                android:background="#999c99"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_eight_id"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/button_eight"
                android:textSize="20dp"
                android:background="#999c99"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <Button
                android:id="@+id/button_six_id"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/button_six"
                android:textSize="20dp"
                android:background="#999c99"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_nine_id"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/button_nine"
                android:textSize="20dp"
                android:background="#999c99"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <Button
                android:id="@+id/add_button_id"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/add_button"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dot_button_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dot_button"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/zero_button_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_zero"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/equal_button_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/equal_button"
            android:textColor="#fff"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>